docs: 记录 A2/B2/A3 质量门禁与 MultiRetrieve IT 迁移实施结果至盘点清单